# snap-test

./: config.status  configure  configure.ac  wasta-backup  wasta-backup-usb-autolaunch
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
cardsorter/: README.md
cardsorter/snap/: snapcraft.yaml
logos9/: README.md  TODO.md
logos9/hooks/: post-install  pre-install  pre-start
logos9/snap/: snapcraft.yaml
logos9/snap/gui/: logos64.desktop
saymore/: README.md
saymore/hooks/: pre-install  pre-start
saymore/snap/: snapcraft.yaml
saymore/snap/local/: built-snapcraft.yaml
snap/: snapcraft.yaml
src/: Makefile.am
wine-platform-6-logos/snap/: snapcraft.yaml
