# what flags you want to pass to the C compiler & linker
CFLAGS = --pedantic -Wall -std=c99 -O2
LDFLAGS =

# this lists the binaries to produce, the (non-PHONY, binary) targets in
# the previous manual Makefile
bin_PROGRAMS = wastabackup
wastabackup_SOURCES = main.cpp mainwindow.cpp mainwindow.h mainwindow.ui
